[package]
name = "a3mm_backend"
version = "0.1.0"
authors = ["Scarjit <scarjit@aol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
flame = "0.2.2"
flamer = "0.3"

a3mo_lib = {path="../a3mo_lib"}